--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/listarConf.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/listarConf.html
@@ -102,10 +102,14 @@
 									<a class="btn btn-secondary btn-xs mx-1"
 									th:href="@{/configuracion/form/{id}(id=${configuracion.id})}"> <!-- Corregido aquí -->
 										<i class="bi bi-pencil-square"></i>
-								</a> <a class="btn btn-danger btn-xs mx-1"
+								</a> 
+								
+								<a class="btn btn-danger btn-xs mx-1"
 									th:href="@{/configuracion/eliminar/{id}(id=${configuracion.id})}">
 										<!-- Corregido aquí --> <i class="bi bi-trash-fill"></i>
 								</a>
+								
+								
 								</td>
 							</tr>
 						</tbody>
@@ -116,7 +120,12 @@
 					<div class="mt-3" style="margin-left: 30px;">
 					<a th:href="@{/configuracion/form}" class="btn btn-secondary"
 						style="background-color: #37517e; transition: background-color 0.3s ease;">
-						Crear Configuración </a>
+						Crear Configuración </a><br><br>
+						
+
+					<a href="https://app.botpress.cloud/workspaces/wkspace_01HGDHX104DGNPKG861N88NQSF/chatbots/e83b0ad7-2085-4f5a-8663-7d033543e23f/analytics" class="btn btn-secondary"
+						style="background-color: #37517e; transition: background-color 0.3s ease;">
+						Usuarios ChatBot Informe </a>
 				</div>
 			</div>
 		</div>
